
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        tools:context=".ui.main.MyInsectsFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="390dp"
        android:layout_height="652dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/showMessage"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/noItems" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/insectsRecyclerView"
            android:layout_width="410dp"
            android:layout_height="648dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/my_insects_item">

        </androidx.recyclerview.widget.RecyclerView>

    </FrameLayout>

        <Button
            android:id="@+id/sortByOrderBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sortByOrder"
            app:layout_constraintEnd_toStartOf="@+id/sortByTimeBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <Button
            android:id="@+id/sortByTimeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sortByTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sortByOrderBtn"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>